<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

        <fragment
            android:id="@+id/navigation_home"
            android:name="com.anisanurjanah.asclepius.view.fragment.HomeFragment"
            android:label="@string/app_name"
            tools:layout="@layout/fragment_home">
                <action
                    android:id="@+id/action_navigation_home_to_navigation_screening"
                    app:destination="@id/navigation_screening" />
                <action
                    android:id="@+id/action_navigation_home_to_navigation_article"
                    app:destination="@id/navigation_article" />
        </fragment>

        <fragment
            android:id="@+id/navigation_screening"
            android:name="com.anisanurjanah.asclepius.view.fragment.ScreeningFragment"
            android:label="@string/screening"
            tools:layout="@layout/fragment_screening">
                <action
                    android:id="@+id/action_navigation_screening_to_navigation_home"
                    app:destination="@id/navigation_home" />
        </fragment>

        <fragment
            android:id="@+id/navigation_article"
            android:name="com.anisanurjanah.asclepius.view.fragment.ArticlesFragment"
            android:label="@string/article"
            tools:layout="@layout/fragment_articles">
                <action
                    android:id="@+id/action_navigation_article_to_navigation_home"
                    app:destination="@id/navigation_home" />
        </fragment>

        <fragment
            android:id="@+id/navigation_profile"
            android:name="com.anisanurjanah.asclepius.view.fragment.ProfileFragment"
            android:label="@string/profile"
            tools:layout="@layout/fragment_profile" >
        </fragment>
</navigation>